[project]
name="nrtk-explorer"
version="0.0.1"
description="Model Visualizer"
authors = [
  {name = "Alessandro Genova", email = "alessandro.genova@kitware.com"},
  {name = "Vicente Adolfo Bolea Sanchez", email = "vicente.bolea@kitware.com"},
]

keywords = [
    "Python",
    "Interactive",
    "Web",
    "Application",
    "Framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: JavaScript",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "nrtk",
    "numpy",
    "pandas",
    "Pillow",
    "scikit-image==0.22.0",
    "scikit-learn==1.4.1.post1",
    "smqtk-classifier==0.19.0",
    "smqtk-core==0.19.0",
    "smqtk-dataprovider==0.18.0",
    "smqtk-descriptors==0.19.0",
    "smqtk-detection[torch,centernet]==0.20.1",
    "smqtk-image-io==0.17.1",
    "tensorflow",
    "timm",
    "torch",
    "torchvision",
    "trame",
    "trame-quasar",
    "trame-client>=2.15.0",
    "trame-server>=2.15.0",
    "ubelt==1.3.4",
    "umap-learn",
]

[project.optional-dependencies]
cuda = [
    "tensorflow[and-cuda]>=2.15.0",
]

dev = [
  "black",
  "flake8",
  "pytest",
  "mypy",
]

[tool.setuptools]
packages= ["nrtk_explorer"]

[project.scripts]
nrtk_explorer = "nrtk_explorer.app:main"
nrtk_explorer_embeddings = "nrtk_explorer.app.embeddings:embeddings"
nrtk_explorer_tranforms = "nrtk_explorer.app.transforms:transforms"

[tool.black]
line-length = 99
target-version = ['py39', 'py310', 'py311']
include = '''
    \.pyi?$
'''
extend-exclude = '''
/(
    \.git
  | bundles/
  | examples/
  | exploration/
)/
'''

[tool.mypy]
ignore_missing_imports = true
exclude = ['^nrtk_explorer/__init__.py$', '^nrtk_explorer/app/.*']
