[metadata]
name = cdao
version = 1.0.0
description = Model Visualizer
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware
license = Other
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-vuetify
    trame-plotly
    trame-client>=2.11.2
    Pillow
    # vtk
    pandas
    # numpy
    # altair
    # mpld3
    plotly
    # pydeck

    smqtk-classifier==0.19.0
    smqtk-core==0.19.0
    smqtk-dataprovider==0.18.0
    smqtk-descriptors==0.19.0
    smqtk-detection[torch,centernet]==0.20.0
    smqtk-image-io==0.17.1

    xaitk-saliency==0.7.0
    ubelt==1.3.2

    torch==1.11
    torchvision==0.12

    scikit-learn==1.3.0
    scikit-image==0.21.0

[options.entry_points]
console_scripts =
    cdao = cdao.app:main
jupyter_serverproxy_servers =
    cdao = cdao.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
